typos and NewBalance with capital N

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="newBalance energy" content="" />
-        <title>newBalance energy</title>
+        <meta name="description" content="Fueling the energy transition. NewBalance was born to develop the global export of South American renewables via green hydrogen" />
+        <meta name="NewBalance Energy" content="" />
+        <title>NewBalance Energy</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -59,7 +59,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">NewBalance was born to develop the global export of South American renewables via green hydrogen</p>
+                        <p class="text-white-75 font-weight-light mb-5">NewBalance Energy was born to develop the global export of South American renewables via green hydrogen</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">newBalance energy is positioned to unlock and expand the commercialization of hydrogen at scale</h2>
+                        <h2 class="text-white mt-0">NewBalance Energy is positioned to unlock and expand the commercialization of hydrogen at scale</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">The development for the global trade of green hydrogen is underway.  
 We are here to accelerate the transition and pioneer the first end-to-end hydrogen supply chain between South America and Asia.</p>
@@ -89,11 +89,11 @@ We are here to accelerate the transition and pioneer the first end-to-end hydrog
                             <img src="assets/site-demand.png" class="section-img">
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-6 col-md-6 description">
                         <div class="mt-5">
                             <h3 class="h4 mb-2 text-center">Designed To Unlock The Hydrogen Commerce</h3>
                             <p class="text-muted mb-0">From 2025, a full global roll out of CO2-free hydrogen will be required. To transition today’s hydrogen global demand to CO2-free hydrogen. </p>
-                            <p class="text-muted mb-0">newBalance energy was designed to identify, build, scale-up, and repurpose existing developments across the renewable energy and industrial sectors to enable a reliable production of CO2-free hydrogen at scale to supply a network of off-takers at an unmatched cost.</p>
+                            <p class="text-muted mb-0">NewBalance Energy was designed to identify, build, scale-up, and repurpose existing developments across the renewable energy and industrial sectors to enable a reliable production of CO2-free hydrogen at scale to supply a network of off-takers at an unmatched cost.</p>
                         </div>
                     </div>
                 </div>
@@ -154,6 +154,7 @@ We are here to accelerate the transition and pioneer the first end-to-end hydrog
                     <div class="col-lg-8">
                         <h2 class="mt-0">Contact Us</h2>
                         <hr class="divider my-4" />
+                        <p class="text-muted">To learn more about our plans for your region, please fill out and submit the form below</p>
                             <form>
                               <div class="mb-3">
                                 <label for="name" class="form-label">Name</label>
@@ -178,7 +179,7 @@ We are here to accelerate the transition and pioneer the first end-to-end hydrog
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2021 - newBalance energy</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2021 - NewBalance Energy</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
