added new section

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">NewBalance Energy is positioned to unlock and expand the commercialization of hydrogen at scale</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">The development for the global trade of green hydrogen is underway.  
-We are here to accelerate the transition and pioneer the first end-to-end hydrogen supply chain between South America and Asia.</p>
+                        <p class="text-white-50 mb-4">The development for the global trade of green hydrogen is underway.  We are here to accelerate the transition and pioneer the first end-to-end hydrogen supply chain between South America and Asia.</p>
                     </div>
                 </div>
             </div>
@@ -109,14 +108,14 @@ We are here to accelerate the transition and pioneer the first end-to-end hydrog
                         <div class="mt-5">
                             <i class="fas fa-4x fa-chart-bar text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Investment Fund</h3>
-                            <p class="text-muted mb-0">We scope, partner, and invest in mission-critical infrastructure projects that would allow multiple consortiums to operate at scale, enabling a global supply chain.</p>
+                            <p class="text-muted mb-0">We partner with and invest in mission-critical infrastructure projects and green hydrogen developments at scale. Together, we are turning South America into the world's most reliable hydrogen exporter.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-handshake text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Off-Taker Market</h3>
-                            <p class="text-muted mb-0">Capitalizing existing partnerships and roles, we are developing the first international green hydrogen off-taker market along with leading economies and companies worldwide.</p>
+                            <p class="text-muted mb-0">We work with leading economies and companies worldwide to develop the first international green hydrogen off-taker market. Together, we are evolving into a hydrogen society through a connected supply chain.</p>
                         </div>
                     </div>
                 </div>
@@ -133,10 +132,10 @@ We are here to accelerate the transition and pioneer the first end-to-end hydrog
                             <img src="assets/site-lcoh.png" class="section-img">
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-6 col-md-6 description">
                         <div class="mt-5">
-                            <h3 class="h4 mb-2 text-center">Unmatched Conditions</h3>
-                            <p class="text-muted mb-0">Due to the natural power density of this region, it is forecasted that by 2040 Green Hydrogen could be up to 50% cheaper than other routes, with a potential to capture 5% of global demand worth USD 30 billion.</p>
+                            <h3 class="h4 mb-2 text-center">Unmatched Natural Conditions</h3>
+                            <p class="text-muted mb-0">Due to the natural power density of wind & solar energy in the region, the production of green hydrogen could be up to 50% cheaper than other routes. It is forcasted that due to its natural conditions, South America could become one of the top 3 green hydrogen exporters by 2040 with a total of 30GW of electrolyzer installed capacity. </p>
                         </div>
                     </div>
                 </div>
@@ -145,6 +144,24 @@ We are here to accelerate the transition and pioneer the first end-to-end hydrog
         <!-- Call to action-->
         <section class="page-section bg-dark text-white map-section">
             <div class="container text-center">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">Roadmap</h2>
+                        <hr class="divider light my-4">
+                        <p class="text-white-50 mb-4">Investing Across Existing Players To Start Exporting In 2025</p>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-4 text-center numbers">
+                                <p><span>250,000</span><br>Tonnes/year, starting 2025</p>
+                            </div>
+                            <div class="col-lg-4 text-center numbers">
+                                <p><span>3GW</span><br>Electrolyzer capacity under management</p>
+                            </div>
+                            <div class="col-lg-4 text-center numbers">
+                                <p><span>USD3.2/kg</span><br>Projected hydrogen price (2025)</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Contact-->
