--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">NewBalance Energy is positioned to unlock and expand the commercialization of hydrogen at scale</h2>
+                        <h2 class="text-white mt-0">Positioned to unlock and expand the commercialization of hydrogen at scale</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">The development for the global trade of green hydrogen is underway.  We are here to accelerate the transition and pioneer the first end-to-end hydrogen supply chain between South America and Asia.</p>
+                        <p class="text-white-50 mb-4">The development for the global trade of renewable fuels is underway. We are here to accelerate the transition and pioneer an international trade of green hydrogen from South Americato the world.</p>
                     </div>
                 </div>
             </div>
@@ -90,9 +90,9 @@
                     </div>
                     <div class="col-lg-6 col-md-6 description">
                         <div class="mt-5">
-                            <h3 class="h4 mb-2 text-center">Designed To Unlock The Hydrogen Commerce</h3>
-                            <p class="text-muted mb-0">From 2025, a full global roll out of CO2-free hydrogen will be required. To transition today’s hydrogen global demand to CO2-free hydrogen. </p>
-                            <p class="text-muted mb-0">NewBalance Energy was designed to identify, build, scale-up, and repurpose existing developments across the renewable energy and industrial sectors to enable a reliable production of CO2-free hydrogen at scale to supply a network of off-takers at an unmatched cost.</p>
+                            <h3 class="h4 mb-2 text-center">Green Hydrogen Commerce</h3>
+                            <p class="text-muted mb-0">From 2025, a full global roll out of CO2-free hydrogen will be required to transition today’s hydrogen global demand to one free from CO2. </p>
+                            <p class="text-muted mb-0">NewBalance was designed to identify, build, scale-up, and repurpose existing developments across the renewable energy and industrial sectors to enable a reliable production and distribution of green hydrogen at an unmatched cost.</p>
                         </div>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                     <div class="col-lg-6 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-chart-bar text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Investment Fund</h3>
+                            <h3 class="h4 mb-2">Capital Investments</h3>
                             <p class="text-muted mb-0">We partner with and invest in mission-critical infrastructure projects and green hydrogen developments at scale. Together, we are turning South America into the world's most reliable hydrogen exporter.</p>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-handshake text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Off-Taker Market</h3>
-                            <p class="text-muted mb-0">We work with leading economies and companies worldwide to develop the first international green hydrogen off-taker market. Together, we are evolving into a hydrogen society through a connected supply chain.</p>
+                            <p class="text-muted mb-0">We work with leading economies and companies worldwide to develop an international green hydrogen off-taker market. Together, we are evolving into a hydrogen society through a connected supply chain.</p>
                         </div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                     <div class="col-lg-6 col-md-6 description">
                         <div class="mt-5">
                             <h3 class="h4 mb-2 text-center">Unmatched Natural Conditions</h3>
-                            <p class="text-muted mb-0">Due to the natural power density of wind & solar energy in the region, the production of green hydrogen could be up to 50% cheaper than other routes. It is forcasted that due to its natural conditions, South America could become one of the top 3 green hydrogen exporters by 2040 with a total of 30GW of electrolyzer installed capacity. </p>
+                            <p class="text-muted mb-0">Due to the natural power density of wind & solar energy in the region, the production of green hydrogen could be up to 50% cheaper than other routes. It is forcasted that South America could become one of the top 3 green hydrogen exporters by 2040 with a total of 30GW of electrolyzer installed capacity. </p>
                         </div>
                     </div>
                 </div>
