--- a/index.html
+++ b/index.html
@@ -83,16 +83,19 @@
                 <h2 class="text-center mt-0" id="approach">Hydrogen For Export</h2>
                 <hr class="divider my-4" />
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 text-center">
+                    <div class="col-lg-6 col-md-6 description">
                         <div class="mt-5">
-                            <img src="assets/site-demand.png" class="section-img">
+                            <h3 class="h4 mb-2">Green Hydrogen Commerce</h3>
+                            <p class="text-muted mb-0">From 2025, a full global roll out of CO2-free hydrogen will be required to transition today’s hydrogen global demand to one free from CO2. </p>
+                            <p class="text-muted mb-0">NewBalance was designed to identify, build, scale-up, and repurpose existing developments across the renewable energy and industrial sectors to enable a reliable production and distribution of green hydrogen at an unmatched cost.</p>
+                        </div>
+                        <div>
+                            <img src="assets/img/site-demand.svg" class="section-img">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 description">
                         <div class="mt-5">
-                            <h3 class="h4 mb-2 text-center">Green Hydrogen Commerce</h3>
-                            <p class="text-muted mb-0">From 2025, a full global roll out of CO2-free hydrogen will be required to transition today’s hydrogen global demand to one free from CO2. </p>
-                            <p class="text-muted mb-0">NewBalance was designed to identify, build, scale-up, and repurpose existing developments across the renewable energy and industrial sectors to enable a reliable production and distribution of green hydrogen at an unmatched cost.</p>
+                            <img src="assets/img/tanker.jpg" class="description-img">
                         </div>
                     </div>
                 </div>
@@ -129,13 +132,16 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 text-center">
                         <div class="mt-5">
-                            <img src="assets/site-lcoh.png" class="section-img">
+                            <img src="assets/img/relief-map.jpeg" class="description-img">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 description">
                         <div class="mt-5">
                             <h3 class="h4 mb-2 text-center">Unmatched Natural Conditions</h3>
                             <p class="text-muted mb-0">Due to the natural power density of wind & solar energy in the region, the production of green hydrogen could be up to 50% cheaper than other routes. It is forcasted that South America could become one of the top 3 green hydrogen exporters by 2040 with a total of 30GW of electrolyzer installed capacity. </p>
+                        </div>
+                        <div>
+                            <img src="assets/img/site-lcoh.svg" class="section-img">
                         </div>
                     </div>
                 </div>
@@ -157,7 +163,7 @@
                                 <p><span>3GW</span><br>Electrolyzer capacity under management</p>
                             </div>
                             <div class="col-lg-4 text-center numbers">
-                                <p><span>USD3.2/kg</span><br>Projected hydrogen price (2025)</p>
+                                <p><span>USD1.4/kg</span><br>Projected LCOH (2030)</p>
                             </div>
                         </div>
                     </div>
