--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Positioned to unlock and expand the commercialization of hydrogen at scale</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">The development for the global trade of renewable fuels is underway. We are here to accelerate the transition and pioneer an international trade of green hydrogen from South Americato the world.</p>
+                        <p class="text-white-50 mb-4">The global rollout of renewable fuels is underway. We are here to accelerate the transition and pioneer the export of green hydrogen from South Americato the world.</p>
                     </div>
                 </div>
             </div>
