--- a/full.html
+++ b/full.html
@@ -41,6 +41,9 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#approach">Our Approach</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#southamerica">South America</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -62,6 +65,111 @@
                 </div>
             </div>
         </header>
+        <!-- About-->
+        <section class="page-section bg-primary" id="about">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">Positioned to unlock and expand the commercialization of hydrogen at scale</h2>
+                        <hr class="divider light my-4" />
+                        <p class="text-white-50 mb-4">The global rollout of renewable fuels is underway. We are here to accelerate the transition and pioneer the export of green hydrogen from South Americato the world.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- South America-->
+        <section class="page-section">
+            <div class="container">
+                <h2 class="text-center mt-0" id="approach">Hydrogen For Export</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 description">
+                        <div class="mt-5">
+                            <h3 class="h4 mb-2">Green Hydrogen Commerce</h3>
+                            <p class="text-muted mb-0">From 2025, a full global roll out of CO2-free hydrogen will be required to transition today’s hydrogen global demand to one free from CO2. </p>
+                            <p class="text-muted mb-0">NewBalance was designed to identify, build, scale-up, and repurpose existing developments across the renewable energy and industrial sectors to enable a reliable production and distribution of green hydrogen at an unmatched cost.</p>
+                        </div>
+                        <div>
+                            <img src="assets/img/site-demand.svg" class="section-img">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 description">
+                        <div class="mt-5">
+                            <img src="assets/img/tanker.jpg" class="description-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Approach-->
+        <section class="page-section bg-secondary" id="services">
+            <div class="container">
+                <h2 class="text-center mt-0" id="approach">Our Approach</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-chart-bar text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Capital Investments</h3>
+                            <p class="text-muted mb-0">We partner with and invest in mission-critical infrastructure projects and green hydrogen developments at scale. Together, we are turning South America into the world's most reliable hydrogen exporter.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-handshake text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Off-Taker Market</h3>
+                            <p class="text-muted mb-0">We work with leading economies and companies worldwide to develop an international green hydrogen off-taker market. Together, we are evolving into a hydrogen society through a connected supply chain.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- South America-->
+        <section class="page-section" id="southamerica">
+            <div class="container">
+                <h2 class="text-center mt-0" id="approach">South America</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 text-center">
+                        <div class="mt-5">
+                            <img src="assets/img/relief-map.jpeg" class="description-img">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 description">
+                        <div class="mt-5">
+                            <h3 class="h4 mb-2 text-center">Unmatched Natural Conditions</h3>
+                            <p class="text-muted mb-0">Due to the natural power density of wind & solar energy in the region, the production of green hydrogen could be up to 50% cheaper than other routes. It is forcasted that South America could become one of the top 3 green hydrogen exporters by 2040 with a total of 30GW of electrolyzer installed capacity. </p>
+                        </div>
+                        <div>
+                            <img src="assets/img/site-lcoh.svg" class="section-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Call to action-->
+        <section class="page-section bg-dark text-white map-section">
+            <div class="container text-center">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">Roadmap</h2>
+                        <hr class="divider light my-4">
+                        <p class="text-white-50 mb-4">Investing Across Existing Players To Start Exporting In 2025</p>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-4 text-center numbers">
+                                <p><span>250,000</span><br>Tonnes/year, starting 2025</p>
+                            </div>
+                            <div class="col-lg-4 text-center numbers">
+                                <p><span>3GW</span><br>Electrolyzer capacity under management</p>
+                            </div>
+                            <div class="col-lg-4 text-center numbers">
+                                <p><span>USD1.4/kg</span><br>Projected LCOH (2030)</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
