clean temp site

--- a/index.html
+++ b/index.html
@@ -35,17 +35,6 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
         <!-- Masthead-->
         <header class="masthead">
             <div class="container h-100">
@@ -57,44 +46,13 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">NewBalance Energy was born to develop the global export of South American renewables via green hydrogen</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="mt-0">Contact Us</h2>
-                        <hr class="divider my-4" />
-                        <p class="text-muted">To learn more about our plans for your region, please fill out and submit the form below</p>
-                            <form>
-                              <div class="mb-3">
-                                <label for="name" class="form-label">Name</label>
-                                <input type="name" class="form-control">
-                                <label type="email" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                              </div>
-                              <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            </div>
-
-                              <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Keep me up to date with your latest news</label>
-                              </div>
-                              <button type="submit" class="btn btn-primary">Submit</button>
-                            </form>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2021 - NewBalance Energy</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2021 - NewBalance Energy</br>info@newbalance.energy</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
