--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-chart-bar text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Capital Investments</h3>
-                            <p class="text-muted mb-0"><b>We partner with and invest in green hydrogen developments at scale, becoming their leading or complementary off-taker.</b> Together, we are turning South America into the world's most reliable hydrogen exporter.
+                            <p class="text-muted mb-0"><b>We partner with and invest in green hydrogen developments at scale, and becomes their lead or complementary off-taker.</b> Together, we are turning South America into the world's most reliable hydrogen exporter.
 </p>
                         </div>
                     </div>
