added blog and updated content

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#approach">Our Approach</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#southamerica">South America</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger nav-blog" target="_blank" href="https://balanced-holdings.medium.com">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -59,7 +60,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">NewBalance Energy was born to develop the global export of South American renewables via green hydrogen</p>
+                        <p class="text-white-75 font-weight-light mb-5">NewBalance Energy was born to connect the best of South America’s green hydrogen production with a closed network of international off-takers.</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
                     </div>
                 </div>
@@ -89,7 +90,7 @@
                             <p class="text-muted mb-0">Transitioning today’s hydrogen (and ammonia) markets to ones free from CO2 will require a global rollout of green hydrogen at scale to start well before 2025.</p>
                             <p class="text-muted mb-0">NewBalance Energy is de-risking the business and technical roadblocks affecting production projects and bringing understanding and predictability to how leading organizations plan and execute their green hydrogen strategies.</p>
                         </div>
-                        <div>
+                        <div style="display: none;">
                             <img src="assets/img/site-demand.svg" class="section-img">
                         </div>
                     </div>
@@ -110,8 +111,8 @@
                     <div class="col-lg-6 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-chart-bar text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Capital Investments</h3>
-                            <p class="text-muted mb-0"><b>We partner with and invest in green hydrogen developments at scale, and becomes their lead or complementary off-taker.</b> Together, we are turning South America into the world's most reliable hydrogen exporter.
+                            <h3 class="h4 mb-2">Empower Hydrogen Production</h3>
+                            <p class="text-muted mb-0"><b>We identify, invest capital, and off-take production from top green hydrogen projects.</b> Together, we’ll turn South America into one of the world's most reliable hydrogen regions.
 </p>
                         </div>
                     </div>
@@ -119,7 +120,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-handshake text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Off-Taker Market</h3>
-                            <p class="text-muted mb-0"><b>We partner with international organizations to develop milestone-driven, long-term, and reliable hydrogen supply deals.</b> Together, we’ll evolve into hydrogen societies through predictable supply chains.
+                            <p class="text-muted mb-0"><b>We partner with international organizations to develop long-term, low-risk, and predictable future hydrogen supply deals.</b> Together, we’ll evolve into hydrogen societies through predictable supply chains.
 </p>
                         </div>
                     </div>
