--- a/index.html
+++ b/index.html
@@ -81,14 +81,19 @@
         <!-- South America-->
         <section class="page-section">
             <div class="container">
-                <h2 class="text-center mt-0" id="approach">Hydrogen For Export</h2>
+                <h2 class="text-center mt-0" id="approach">Our Approach</h2>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-6 col-md-6 description">
                         <div class="mt-5">
-                            <h3 class="h4 mb-2">Green Hydrogen Commerce</h3>
-                            <p class="text-muted mb-0">Transitioning today’s hydrogen (and ammonia) markets to ones free from CO2 will require a global rollout of green hydrogen at scale to start well before 2025.</p>
-                            <p class="text-muted mb-0">NewBalance Energy is de-risking the business and technical roadblocks affecting production projects and bringing understanding and predictability to how leading organizations plan and execute their green hydrogen strategies.</p>
+                            <h3 class="h4 mb-2">Unlocking Hydrogen Production & Trade</h3>
+                            <p class="text-muted mb-0">NewBalance Energy is pioneering the global trade of South American green hydrogen by bringing understanding and predictability to the planning and execution of leading organizations and their transition to hydrogen, including de-risking the commercial and technical challenges affecting production projects.</p>
+
+                            <p class="text-muted mb-0">We develop a proprietary body of knowledge and protocols powered by unique hydrogen-related expertise that allows <b>discovery, selection, and investment</b> in the most competitive and reliable production projects worldwide.</p>
+
+                            <p class="text-muted mb-0">At the same time, we use this knowledge base to provide international off-takers with a <b>transparent way to obtain future hydrogen supplies</b> from NewBalance through milestone-driven commitments and independently auditable processes.</p>
+
+                            <p class="text-muted mb-0">This results in a de-risked, predictable, and milestone-driven pathway to <b>overcoming the established chicken-and-egg dynamics</b> that have delayed the commercial and technical evolution of this industry.</p>
                         </div>
                         <div style="display: none;">
                             <img src="assets/img/site-demand.svg" class="section-img">
@@ -105,13 +110,13 @@
         <!-- Approach-->
         <section class="page-section bg-secondary" id="services">
             <div class="container">
-                <h2 class="text-center mt-0" id="approach">Our Approach</h2>
+                <h2 class="text-center mt-0" id="approach">Our Pillars</h2>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-6 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-chart-bar text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Empower Hydrogen Production</h3>
+                            <h3 class="h4 mb-2">Hydrogen Production</h3>
                             <p class="text-muted mb-0"><b>We identify, invest capital, and off-take production from top green hydrogen projects.</b> Together, we’ll turn South America into one of the world's most reliable hydrogen regions.
 </p>
                         </div>
