--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="container h-100">  
                 <div class="row align-items-center">
                     <div class="col-lg-6 no-mobile">
-                        <div id="anim-61c47741e8a05" class="wpbdmv-animation renderer-svg" style="max-width: 100%;">
+                        <div id="anim-61c47741e8a05" class="wpbdmv-animation renderer-svg" style="max-width: 100%; width: 100%;">
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -76,7 +76,7 @@
         <section class="page-section bg-secondary" id="platform">
             <div class="container">
                 <span class=" welcome-dark welcome--dot text-center mt-0">Our Platform</span>
-                <h2 class="text-center mt-0">Designed for Projects. Built for Off-takers.</h2>
+                <h2 class="text-center mt-0">Designed for Projects and Built for Off-takers.</h2>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-6 col-md-6 text-center">
@@ -138,7 +138,7 @@
             </div>
         </section>
         <!-- South America-->
-        <section class="page-section" id="southamerica">
+        <section class="page-section bg-secondary" id="southamerica">
             <div class="container">
               <span class=" welcome-dark welcome--dot text-center mt-0">Production Region</span>
                 <h2 class="text-center mt-0" id="location">South America</h2>
